--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                                                     and Africa , ranging from startups to Fortune 70 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact" target="_blank">GET IN
+                                                <a class="default__button" href="contact">GET IN
                                                     TECH</a>
                                             </div>
                                         </div>
@@ -402,7 +402,7 @@
                                                     from startups to Fortune 70 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact" target="_blank">GET IN
+                                                <a class="default__button" href="contact">GET IN
                                                     TECH</a>
                                             </div>
                                         </div>
@@ -432,7 +432,7 @@
                                                 </p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="contact" target="_blank">GET IN
+                                                <a class="default__button" href="contact">GET IN
                                                     TECH</a>
                                             </div>
                                         </div>
@@ -510,8 +510,7 @@
                                 achieve your organization’s optimum and make your mark in your field.
 
                             </p>
-                            <a href="contact" target="_blank" class="default__button mt-3"><i
-                                    class="bi bi-calendar-check"></i> Book
+                            <a href="contact" class="default__button mt-3"><i class="bi bi-calendar-check"></i> Book
                                 Free
                                 Consultation</a>
                         </div>
@@ -530,14 +529,13 @@
                         <div class="col-md-6 text-center mt-4 mt-md-0" data-aos="fade-up" data-aos-duration="2000">
                             <p class="mt-2">
                                 Digital Minds On specializes in delivering cutting-edge <a
-                                    href="software-development-services" style="font-weight: bold; color: #FE0094;"
-                                    target="_blank">
+                                    href="software-development-services" style="font-weight: bold; color: #FE0094;">
                                     software development solutions</a>
                                 tailored to meet the unique needs of modern businesses. Our team of experienced
                                 developers and designers collaborates to create high-quality, efficient, and scalable
                                 applications that drive productivity and innovation. With expertise in web and <a
-                                    href="mobile-app-development-services" style="font-weight: bold; color: #FE0094;"
-                                    target="_blank">mobile
+                                    href="mobile-app-development-services"
+                                    style="font-weight: bold; color: #FE0094;">mobile
                                     development</a>, cloud solutions, and custom software, we help businesses streamline
                                 operations, enhance user experiences, and achieve their digital transformation goals.
                             </p>
@@ -548,7 +546,7 @@
                     <div class="row g-4" style="justify-content: center;">
                         <!-- new service card -->
                         <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                            <a href="web-development-services" target="_blank" class="mb-3 text-decoration-none"
+                            <a href="web-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
@@ -571,7 +569,7 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                            <a href="software-development-services" target="_blank" class="mb-3 text-decoration-none"
+                            <a href="software-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
@@ -593,7 +591,7 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                            <a href="game-development-services" target="_blank" class="mb-3 text-decoration-none"
+                            <a href="game-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
@@ -614,7 +612,7 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                            <a href="mobile-app-development-services" target="_blank" class="mb-3 text-decoration-none"
+                            <a href="mobile-app-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
@@ -636,8 +634,7 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                            <a href="seo-services" target="_blank" class="mb-3 text-decoration-none"
-                                style="display: block;">
+                            <a href="seo-services" class="mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
@@ -658,8 +655,7 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                            <a href="ui-ux-design" target="_blank" class=" mb-3 text-decoration-none"
-                                style="display: block;">
+                            <a href="ui-ux-design" class=" mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
@@ -681,8 +677,7 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                            <a href="network-services" target="_blank" class=" mb-3 text-decoration-none"
-                                style="display: block;">
+                            <a href="network-services" class=" mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
@@ -705,8 +700,7 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                            <a href="content-creater" target="_blank" class="mb-3 text-decoration-none"
-                                style="display: block;">
+                            <a href="content-creater" class="mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
@@ -785,8 +779,8 @@
                                     <span>03</span>
                                     <p>Years Experience</p>
                                     <div class="about__number__icon">
-                                        <a href="about" target="_blank"> <svg width="34" height="34" viewBox="0 0 34 34"
-                                                fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <a href="about"> <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
                                                     stroke-linecap="round" stroke-linejoin="round"></path>
@@ -832,7 +826,7 @@
                             </div>
 
                             <div class="about__button">
-                                <a class="default__button" href="about" target="_blank">LEARN MORE ABOUT</a>
+                                <a class="default__button" href="about">LEARN MORE ABOUT</a>
                             </div>
                         </div>
                     </div>
@@ -993,7 +987,7 @@
                                 <p>Lahore, Pakistan</p>
                             </li>
                         </ul>
-                        <a class="default__button" href="contact" target="_blank" style="margin-top: 40px;">CONTACT
+                        <a class="default__button" href="contact" style="margin-top: 40px;">CONTACT
                             US</a>
                     </div>
                     <!-- contact form -->
@@ -1025,7 +1019,7 @@
                             <p>Digital Minds On Providing cutting-edge web development services to craft innovative,
                                 user-friendly, and scalable digital solutions tailored to your business needs.
                             </p>
-                            <a href="web-development-services" target="_blank" class="default__button">Learn more</a>
+                            <a href="web-development-services" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -1056,7 +1050,7 @@
                                 content marketing programs, fostering engagement and delivering measurable results for
                                 business growth.
                             </p>
-                            <a href="digital-marketing-services" class="default__button" target="_blank">Learn more</a>
+                            <a href="digital-marketing-services" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -1066,7 +1060,7 @@
                             <p>Digital Minds On delivers dedicated, 24/7 customer support services, ensuring enhanced
                                 customer satisfaction through smooth, efficient interactions for a seamless experience
                                 every time.</p>
-                            <a href="contact" target="_blank" class="default__button">Learn more</a>
+                            <a href="contact" class="default__button">Learn more</a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -1076,7 +1070,7 @@
                             <p>Digital Minds On specializes in application and website development, utilizing the latest
                                 technologies and providing IT support services for seamless and effective technology
                                 implementation.</p>
-                            <a href="network-services" target="_blank" class="default__button">Learn more</a>
+                            <a href="network-services" class="default__button">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -1106,7 +1100,7 @@
                             <div class="project__section__img text__end">
                                 <div class="bastun__brand__badge">
                                     <div class="bastun__brand__badge__inner position-relative">
-                                        <a href="/" target="_blank">
+                                        <a href="/">
                                             <img class="bbb__animate" src="assets/img/project/project__1.png"
                                                 alt="Footer badge">
                                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg"
@@ -1142,7 +1136,7 @@
                                         <div class="row align-items-center">
                                             <div class="col-xl-6 col-lg-6  col-md-6 col-sm-6 col-12">
                                                 <div class="project__bottom__button">
-                                                    <a class="default__button" href="project" target="_blank">VIEW OTHER
+                                                    <a class="default__button" href="project">VIEW OTHER
                                                         PROJECT</a>
                                                 </div>
                                             </div>
@@ -1410,7 +1404,7 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                         <div class="blog__section__button text__end">
-                            <a class="default__button btn__blue" href="blog" target="_blank">ALL ARTICLES</a>
+                            <a class="default__button btn__blue" href="blog">ALL ARTICLES</a>
                         </div>
                     </div>
                 </div>
@@ -1427,16 +1421,15 @@
                             </div>
                         </div>
                         <div class="blog__content">
-                            <h6><a href="what-is-mobile-application-development" target="_blank">What is Mobile App
+                            <h6><a href="what-is-mobile-application-development">What is Mobile App
                                     Development</a>
                             </h6>
                             <p>Mobile application development is the process of designing, developing and programming
                                 software applications that can operate on tablet or smartphone devices.</p>
                         </div>
                         <div class="blog__icon">
-                            <a class="direction__btn" href="what-is-mobile-application-development" target="_blank"><svg
-                                    width="34" height="34" viewBox="0 0 34 34" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
+                            <a class="direction__btn" href="what-is-mobile-application-development"><svg width="34"
+                                    height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                         stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                         stroke-linejoin="round" />
@@ -1458,16 +1451,15 @@
                             </div>
                         </div>
                         <div class="blog__content">
-                            <h6><a href="what-is-software-development" target="_blank">Whats is Software Development</a>
+                            <h6><a href="what-is-software-development">Whats is Software Development</a>
                             </h6>
                             <p>Software development is the process of designing, creating, testing, and maintaining
                                 software applications, encompassing the entire lifecycle from understanding user needs
                                 to planning, coding, testing, and deploying a functional software solution</p>
                         </div>
                         <div class="blog__icon">
-                            <a class="direction__btn" href="what-is-software-development" target="_blank"><svg
-                                    width="34" height="34" viewBox="0 0 34 34" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
+                            <a class="direction__btn" href="what-is-software-development"><svg width="34" height="34"
+                                    viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                         stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                         stroke-linejoin="round" />
@@ -1489,14 +1481,14 @@
                             </div>
                         </div>
                         <div class="blog__content">
-                            <h6><a href="what-is-web-development" target="_blank">What is Web Development</a></h6>
+                            <h6><a href="what-is-web-development">What is Web Development</a></h6>
                             <p>Web development is the process of creating, maintaining, and building websites. It
                                 involves coding, programming, and other technical elements, as well as creative aspects
                                 like user experience design</p>
                         </div>
                         <div class="blog__icon">
-                            <a class="direction__btn" href="what-is-web-development" target="_blank"><svg width="34"
-                                    height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <a class="direction__btn" href="what-is-web-development"><svg width="34" height="34"
+                                    viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                         stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                         stroke-linejoin="round" />
