--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                                 Digital Minds On Providers</h3>
 
                         </div>
-                        <div class="col-md-6 text-center mt-4 mt-md-0" data-aos="fade-up" data-aos-duration="2000">
+                        <div class="col-md-6 text-center mt-4 mt-md-0" data-aos="zoom-in" data-aos-duration="2000">
                             <p class="mt-2">
                                 Digital Minds On specializes in delivering cutting-edge <a
                                     href="software-development-services" style="font-weight: bold; color: #FE0094;">
@@ -545,7 +545,7 @@
                 <div class="container mt-5">
                     <div class="row g-4" style="justify-content: center;">
                         <!-- new service card -->
-                        <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="fade-up" data-aos-duration="1000">
                             <a href="web-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
@@ -568,7 +568,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                             <a href="software-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
@@ -590,7 +590,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
                             <a href="game-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
@@ -611,7 +611,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="zoom-out" data-aos-duration="1000">
                             <a href="mobile-app-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
@@ -633,7 +633,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="fade-up" data-aos-duration="1000">
                             <a href="seo-services" class="mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
@@ -654,7 +654,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                             <a href="ui-ux-design" class=" mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
@@ -676,7 +676,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
                             <a href="network-services" class=" mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
@@ -699,7 +699,7 @@
                             </a>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="zoom-out" data-aos-duration="1000">
                             <a href="content-creater" class="mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
