--- a/web-development-services.html
+++ b/web-development-services.html
@@ -633,7 +633,7 @@
                 </div>
 
                 <div class="row g-4 horizontal-card">
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="fade-up" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -653,7 +653,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -672,7 +672,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -691,7 +691,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-out" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -713,7 +713,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -732,7 +732,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="fade-up" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -750,7 +750,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -770,7 +770,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -791,7 +791,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8 large-card" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-8 large-card" data-aos="zoom-out" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
