--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -591,7 +591,7 @@
                     </div>
                 </div>
                 <div class="row g-4 horizontal-card" style="padding-top: 40px !important;">
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="fade-up" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -610,7 +610,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -628,7 +628,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="fade-up" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -647,7 +647,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -667,7 +667,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8 large-card" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-8 large-card" data-aos="fade-up" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
