--- a/game-development-services.html
+++ b/game-development-services.html
@@ -582,7 +582,7 @@
                     </div>
                 </div>
                 <div class="row g-4 horizontal-card">
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -601,7 +601,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-out" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -618,7 +618,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -636,7 +636,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-out" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -655,7 +655,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -673,7 +673,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-out" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
