--- a/seo-services.html
+++ b/seo-services.html
@@ -656,7 +656,7 @@
                     </div>
                 </div>
                 <div class="row g-4 horizontal-card">
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -674,7 +674,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -692,7 +692,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -711,7 +711,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -730,7 +730,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -748,7 +748,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
