--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                 <div class="container mt-5">
                     <div class="row g-4" style="justify-content: center;">
                         <!-- new service card -->
-                        <div class="col-md-6" data-aos="fade-up" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                             <a href="web-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
@@ -590,7 +590,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                             <a href="game-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
@@ -611,7 +611,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="zoom-out" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                             <a href="mobile-app-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
                                 <div class="card">
@@ -633,7 +633,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="fade-up" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                             <a href="seo-services" class="mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
@@ -676,7 +676,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="fade-down" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                             <a href="network-services" class=" mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
@@ -699,7 +699,7 @@
                             </a>
                             </a>
                         </div>
-                        <div class="col-md-6" data-aos="zoom-out" data-aos-duration="1000">
+                        <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                             <a href="content-creater" class="mb-3 text-decoration-none" style="display: block;">
                                 <div class="card">
                                     <div class="row g-0">
