--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -588,7 +588,7 @@
                 </div>
                 <!-- card -->
                 <div class="row g-4 horizontal-card">
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -606,7 +606,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -624,7 +624,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -643,7 +643,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -663,7 +663,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
@@ -682,7 +682,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
+                    <div class="col-md-6" data-aos="zoom-in" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
