--- a/contact.html
+++ b/contact.html
@@ -387,7 +387,7 @@
                                     <div class="col-xl-12">
                                         <div class="phone-input-container mb-4">
                                             <label for="phone" class="intel-hidden">Phone Number</label>
-                                            <input id="phone" name="phone" type="tel" class="contact__common__input"
+                                            <input id="phone" name="phone" type="number" class="contact__common__input"
                                                 placeholder="Enter your phone number" required />
                                             <input type="hidden" id="countryCode" name="countryCode">
                                         </div>
